@@ -3,6 +3,7 @@ CHANGES IN FLTK 1.1.7
 	- Documentation fixes (STR #571, STR #648, STR #692, STR
 	  #730, STR #744, STR #745, STR #931, STR #942, STR #960,
 	  STR #969)
+	- Menus now pop up fully inside the screen if possible (STR #973)
 	- Fixed illegal acces in Preferenes (STR #1025)
 	- Fixed x-offset problem in Help_Widget (STR #998)
 	- Clipboard will persist if owner window is hidden (STR #1019)
